Cards (columns): replace all sections with new examples; add screenshots; support ICON RADIUS presets (circle|soft|none) and apply meta styles to icon-left/right; align behavior respects CARD ALIGN

--- a/index.html
+++ b/index.html
@@ -774,208 +774,299 @@ ROW BG:
 
                 <div class="tab-content" id="benefits">
                     <h3>Cards (columns)</h3>
-                    
+
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/1.jpg" alt="Cards 3col Example">
+                            <img src="screenshots/cards-columns/1.jpg" alt="Cards image 3col (5/3)">
                         </div>
                         <div class="section-content">
-                        <h4>Cards 3col</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-TITLE: TITLE
+                            <h4>Cards image 3col (5/3)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards 
+TITLE: Our Services
 HEADING: H2
 COLS: 3
+CARD ALIGN: center
 IMAGE SIZE (RATIO): 5/3
-CARD BG: #eee
+CARD BG: #f5f5f5
 BORDER CARD: none
-CARD RADIUS: 10
+CARD RADIUS: 7
 BTN BORDER: 1px solid #000000
-DESC TOP: TOP DESC
+DESC TOP: Professional solutions tailored to your business needs
 DESC TOP ALIGN: center
 
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE1 | DESC1 | BTN TEXT1 | URL1
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE2 | DESC2 | BTN TEXT2 | URL2
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE3 | DESC3 | BTN TEXT3 | URL3
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Web Development | Create stunning, responsive websites that drive engagement and convert visitors into customers with modern technologies
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Mobile Apps | Build powerful iOS and Android applications that deliver exceptional user experiences and boost your business growth
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Cloud Solutions | Deploy scalable cloud infrastructure and services to enhance productivity while reducing operational costs
 
-DESC BOTTOM: BOTTOM DESC
+DESC BOTTOM: Ready to transform your digital presence? Let's discuss your project
 DESC BOTTOM ALIGN: center
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/2.jpg" alt="Cards 4col Example">
+                            <img src="screenshots/cards-columns/2.jpg" alt="Cards image 4col (pricing)">
                         </div>
                         <div class="section-content">
-                        <h4>Cards 4col</h4>
-                        <pre>/* start */
-LAYOUT: Cards 4col 4/3
-TITLE: TITLE
+                            <h4>Cards image 4col (pricing)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards
+TITLE: Pricing Plans
 HEADING: H2
+IMAGE SIZE (RATIO): 5/3
 COLS: 4
 CARD ALIGN: center
-BG CONTAINER: #f5f5f5
-PADDING CONTAINER: 30 15
-CONTAINER WIDTH: 1200 | 92%
+BG SECTION: #f5f5f5
 CONTAINER ALIGN: center
-CARDS WRAP: center
+
 CARD BG: linear-gradient(180deg, #fff, #f8f8f8)
 CARD TITLE COLOR: #111111
 CARD BG: #ffffff
 BORDER CARD: none
-CARD RADIUS: 8
-DESC TOP: TOP DESC
+CARD RADIUS: 7
+DESC TOP: Choose the perfect plan for your business needs
 DESC TOP ALIGN: center
 BTN BG: #f5f5f5
 
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE1 | DESC1 | BTN TEXT1 | URL1
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE2 | DESC2 | BTN TEXT2 | URL2
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE3 | DESC3 | BTN TEXT3 | URL3
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE4 | DESC4 | BTN TEXT4 | URL4
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE5 | DESC5 | BTN TEXT5 | URL5
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE6 | DESC6 | BTN TEXT6 | URL6
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Basic | Essential features for individuals and small teams starting their digital journey with basic support
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Professional | Advanced tools and priority support for growing businesses that need reliable solutions
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Business | Comprehensive features with dedicated account management for established companies
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Enterprise | Custom solutions with white-label options and 24/7 dedicated support for large organizations
 
-DESC BOTTOM: BOTTOM DESC
+DESC BOTTOM: All plans include 24/7 support and 30-day money-back guarantee
 DESC BOTTOM ALIGN: center
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/4.jpg" alt="Cards 3col Steps Example">
+                            <img src="screenshots/cards-columns/3.jpg" alt="Cards image 4/3 (process)">
                         </div>
                         <div class="section-content">
-                        <h4>Cards 3col Steps</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-TITLE: TITLE
+                            <h4>Cards image 4/3 (process)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards
+IMAGE SIZE (RATIO): 4/3
+TITLE: Our Process
+HEADING: H2
+CARDS WRAP: center
+COLS: 3
+CARD ALIGN: center
+CARD BG: #fff
+CARD RADIUS: 7
+BORDER CARD: none
+CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+CARD TITLE COLOR: #0f172a
+CARD COLOR: #475569
+BTN BORDER: 1px solid #000000
+DESC TOP: How we deliver exceptional results for our clients
+DESC TOP ALIGN: center
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Discovery | We start by understanding your business goals, target audience, and unique challenges
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Strategy | Our team develops a comprehensive strategy tailored to your specific needs
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Design | We create beautiful, user-friendly designs that reflect your brand identity
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Development | Our developers bring your vision to life with clean, efficient code
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Launch | We ensure smooth deployment and provide ongoing support for success
+
+DESC BOTTOM: Ready to start your project? Get in touch with our team today
+DESC BOTTOM ALIGN: center
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/4.jpg" alt="Cards steps (icons)">
+                        </div>
+                        <div class="section-content">
+                            <h4>Cards steps (icons)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards
+TITLE: Our Workflow
 HEADING: H2
 COLS: 3
+CARD ALIGN: center
+ICON SIZE: medium
+ICON FONT SIZE: medium
+ICON BG: #f5f5f5
+ICON COLOR: #000000
 CARD BG: #ffffff
-CARD RADIUS: 12
+CARD RADIUS: 7
 CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+ICON RADIUS: soft
 BORDER CARD: none
 CARD TITLE COLOR: #111111
 CARD COLOR: #555555
-DESC TOP: TOP DESC
+DESC TOP: How we deliver exceptional results for our clients
 DESC TOP ALIGN: center
 BTN BG: #f5f5f5
 
-ICON: STEP 1 | TITLE1 | DESC1 | BTN TEXT1 | URL1
-ICON: STEP 2 | TITLE2 | DESC2 | BTN TEXT2 | URL2
-ICON: STEP 3 | TITLE3 | DESC3 | BTN TEXT3 | URL3
+ICON: 01 | First Step | We start by understanding your business goals, target audience, and unique challenges
+ICON: 02 | Second Step | Our team develops a comprehensive strategy tailored to your specific needs
+ICON: 03 | Third Step | We execute the plan with precision, delivering high-quality results
 
-DESC BOTTOM: BOTTOM DESC
+DESC BOTTOM: Ready to start your project? Get in touch with our team today
 DESC BOTTOM ALIGN: center
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/5.jpg" alt="Cards 4col Packages Example">
+                            <img src="screenshots/cards-columns/5.jpg" alt="Cards icon-left (circle)">
                         </div>
                         <div class="section-content">
-                        <h4>Cards 4col Packages</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col 
-IMAGE SIZE (RATIO): 4/3
-TITLE: TITLE
+                            <h4>Cards icon-left (circle)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon-left
+TITLE: Our Services
 HEADING: H2
-CARDS WRAP: center
-COLS: 5
-CARD BG: #fff
-CARD RADIUS: 10
-BORDER CARD: none
-CARD TITLE COLOR: #0f172a
-CARD COLOR: #475569
-DESC TOP: TOP DESC
-DESC TOP ALIGN: center
-
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE1 | DESC1 | BTN TEXT1 | URL1
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE2 | DESC2 | BTN TEXT2 | URL2
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE3 | DESC3 | BTN TEXT3 | URL3
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | TITLE4 | DESC4 | BTN TEXT4 | URL4
-
-DESC BOTTOM: BOTTOM DESC
-DESC BOTTOM ALIGN: center
-/* end */</pre>
-                        </div>
-                    </div>
-
-                    <div class="section">
-                        <div class="section-media">
-                            <img src="screenshots/cards-columns/6.jpg" alt="Cards 3col Icons Example">
-                        </div>
-                        <div class="section-content">
-                        <h4>Cards 3col Icons</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-CONTAINER WIDTH: 1200 | 92%
-CONTAINER ALIGN: center
-CARDS WRAP: center
-CARD WIDTH: 340px  
-CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
-CARD ALIGN: left
-TITLE: TITLE
-HEADING: H2
-
-ICON: 🚗 | TITLE1 | DESC1
-ICON: 🧽 | TITLE2 | DESC2
-ICON: ✨ | TITLE3 | DESC3
-ICON: 🛡️ | TITLE4 | DESC4
-ICON: 🪟 | TITLE5 | DESC5
-ICON: 🔧 | TITLE6 | DESC6
-/* end */</pre>
-                        </div>
-                    </div>
-
-                    <div class="section">
-                        <div class="section-media">
-                            <img src="screenshots/cards-columns/3.jpg" alt="Cards 3col Icons Example">
-                        </div>
-                        <div class="section-content">
-                        <h4>Cards 3col Icons</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-CONTAINER WIDTH: 1200 | 92%
-CONTAINER ALIGN: center
-CARDS WRAP: center
-CARD WIDTH: 340px  
-CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
-TITLE: TITLE
-HEADING: H2
-
-ICON: 🚗 | TITLE1 | DESC1
-ICON: 🧽 | TITLE2 | DESC2
-ICON: ✨ | TITLE3 | DESC3
-ICON: 🛡️ | TITLE4 | DESC4
-ICON: 🪟 | TITLE5 | DESC5
-/* end */</pre>
-                        </div>
-                    </div>
-
-                    <div class="section">
-                        <div class="section-media">
-                            <img src="screenshots/cards-columns/Cards icon-right.jpg" alt="Cards icon-right Example">
-                        </div>
-                        <div class="section-content">
-                        <h4>Cards icon-right</h4>
-                        <div class="code-wrapper"><pre>/* start */
-LAYOUT: Cards icon-right
-TITLE: TITLE
-HEADING: H2
-CONTAINER WIDTH: 1200 | 92%
+CONTAINER WIDTH: 1200 | 100%
 CONTAINER ALIGN: center
 CARDS WRAP: center
 COLS: 3
 ICON SIZE: medium
-CARD ALIGN: center
+ICON FONT SIZE: medium
+ICON BG: #ffffff
+ICON COLOR: #000000
 CARD BG: #f5f5f5
-DESC TOP: TOP DESC
+CARD RADIUS: 7
+ICON RADIUS: circle
+DESC TOP: Professional solutions for your business needs
+DESC TOP ALIGN: center
+
+ICON: 01 | Discovery | We analyze your goals, market context, and constraints to shape a clear roadmap
+ICON: 02 | Planning | We define milestones and resources to ensure predictable delivery and transparency
+ICON: 03 | Design | We craft clean, accessible interfaces that reflect your brand and improve conversion
+ICON: 04 | Development | We implement robust features with scalable, maintainable, and well-tested code
+ICON: 05 | Optimization | We monitor, iterate, and fine‑tune performance for long‑term business impact
+
+DESC BOTTOM: Professional solutions for your business needs
+DESC BOTTOM ALIGN: center
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/6.jpg" alt="Cards steps (large icons)">
+                        </div>
+                        <div class="section-content">
+                            <h4>Cards steps (large icons)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards
+TITLE: Our Workflow
+HEADING: H2
+COLS: 3
+CARD ALIGN: center
+ICON FONT SIZE: large
+ICON COLOR: #000000
+CARD BG: #ffffff
+CARD RADIUS: 7
+CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+BORDER CARD: none
+CARD TITLE COLOR: #111111
+CARD COLOR: #555555
+DESC TOP: How we deliver exceptional results for our clients
+DESC TOP ALIGN: center
+BTN BG: #f5f5f5
+
+ICON: Step 1 | First Step | We start by understanding your business goals, target audience, and unique challenges
+ICON: Step 2 | Second Step | Our team develops a comprehensive strategy tailored to your specific needs
+ICON: Step 3 | Third Step | We execute the plan with precision, delivering high-quality results
+
+DESC BOTTOM: Ready to start your project? Get in touch with our team today
+DESC BOTTOM ALIGN: center
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/7.jpg" alt="Cards icon-top">
+                        </div>
+                        <div class="section-content">
+                            <h4>Cards icon-top</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon
+TITLE: Our Methodology
+HEADING: H2
+COLS: 3
+CARD ALIGN: center
+ICON SIZE: medium
+CARD BG: #ffffff
+CARD RADIUS: 7
+CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+BORDER CARD: none
+CARD TITLE COLOR: #111111
+CARD COLOR: #555555
+DESC TOP: How we deliver exceptional results for our clients
+DESC TOP ALIGN: center
+BTN BG: #f5f5f5
+
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Research | Deep dive into market analysis and competitor research to identify opportunities
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Planning | Create detailed project roadmaps and timelines for successful execution
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Implementation | Execute the plan with precision, delivering high-quality results
+
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/8.jpg" alt="Cards icon-top (pricing)">
+                        </div>
+                        <div class="section-content">
+                            <h4>Cards icon-top (pricing)</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon
+TITLE: Pricing Plans
+HEADING: H2
+CARDS WRAP: center
+COLS: 3
+ICON SIZE: medium
+CARD ALIGN: left
+BG SECTION: #f5f5f5
+CARD BG: #ffffff
+BORDER CARD: none
+CARD RADIUS: 7
+DESC TOP: Choose the perfect plan for your business needs
+DESC TOP ALIGN: center
+BTN BG: #f5f5f5
+
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Starter | Perfect for small businesses and startups looking to establish their online presence quickly
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Professional | Ideal for growing companies that need advanced features and dedicated support
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Enterprise | Comprehensive solution for large organizations with complex requirements
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Custom | Tailored solutions designed specifically for your unique business needs
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Premium | Exclusive features with dedicated support and priority access to new releases
+
+DESC BOTTOM: All plans include 24/7 support and 30-day money-back guarantee
+DESC BOTTOM ALIGN: center
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/9.jpg" alt="Cards icon-right">
+                        </div>
+                        <div class="section-content">
+                            <h4>Cards icon-right</h4>
+                            <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon-right
+TITLE: Our Features
+HEADING: H2
+CONTAINER WIDTH: 1200 | 100%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+COLS: 3
+ICON SIZE: medium
+CARD BG: #f5f5f5
+CARD RADIUS: 7
+DESC TOP: Professional solutions for your business needs
 DESC TOP ALIGN: center
 
 IMG: https://beontop.netlify.app/1x1-600x600.jpg | Data Analytics | Get comprehensive insights into your business performance with real-time dashboards and detailed reporting tools
@@ -989,11 +1080,11 @@ IMG: https://beontop.netlify.app/1x1-600x600.jpg | Smart Features | Leverage AI-
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/Cards icon-left.jpg" alt="Cards icon-left Example">
+                            <img src="screenshots/cards-columns/10.jpg" alt="Cards icon-left (small)">
                         </div>
                         <div class="section-content">
-                        <h4>Cards icon-left</h4>
-                        <div class="code-wrapper"><pre>/* start */
+                            <h4>Cards icon-left (small)</h4>
+                            <div class="code-wrapper"><pre>/* start */
 LAYOUT: Cards icon-left
 TITLE: Our Services
 HEADING: H2
@@ -1002,8 +1093,8 @@ CONTAINER ALIGN: center
 CARDS WRAP: center
 COLS: 3
 ICON SIZE: small
-CARD ALIGN: center
 CARD BG: #f5f5f5
+CARD RADIUS: 7
 DESC TOP: Professional solutions for your business needs
 DESC TOP ALIGN: center
 
