Cards (columns): update section previews to new dashed filenames

--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@ ROW BG:
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/1.jpg" alt="Cards image 3col (5/3)">
+                            <img src="screenshots/cards-columns/Cards-image-3col-5:3.jpg" alt="Cards image 3col (5/3)">
                         </div>
                         <div class="section-content">
                             <h4>Cards image 3col (5/3)</h4>
@@ -807,7 +807,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/2.jpg" alt="Cards image 4col (pricing)">
+                            <img src="screenshots/cards-columns/Cards-image-4col-pricing.jpg" alt="Cards image 4col (pricing)">
                         </div>
                         <div class="section-content">
                             <h4>Cards image 4col (pricing)</h4>
@@ -843,7 +843,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/3.jpg" alt="Cards image 4/3 (process)">
+                            <img src="screenshots/cards-columns/Cards-image-4:3-process.jpg" alt="Cards image 4/3 (process)">
                         </div>
                         <div class="section-content">
                             <h4>Cards image 4/3 (process)</h4>
@@ -879,7 +879,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/4.jpg" alt="Cards steps (icons)">
+                            <img src="screenshots/cards-columns/Cards-steps-icons.jpg" alt="Cards steps (icons)">
                         </div>
                         <div class="section-content">
                             <h4>Cards steps (icons)</h4>
@@ -916,7 +916,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/5.jpg" alt="Cards icon-left (circle)">
+                            <img src="screenshots/cards-columns/Cards-icon-left-circle.jpg" alt="Cards icon-left (circle)">
                         </div>
                         <div class="section-content">
                             <h4>Cards icon-left (circle)</h4>
@@ -952,7 +952,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/6.jpg" alt="Cards steps (large icons)">
+                            <img src="screenshots/cards-columns/Cards-steps-large-icons.jpg" alt="Cards steps (large icons)">
                         </div>
                         <div class="section-content">
                             <h4>Cards steps (large icons)</h4>
@@ -986,7 +986,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/7.jpg" alt="Cards icon-top">
+                            <img src="screenshots/cards-columns/Cards-icon-top.jpg" alt="Cards icon-top">
                         </div>
                         <div class="section-content">
                             <h4>Cards icon-top</h4>
@@ -1017,7 +1017,7 @@ IMG: https://beontop.netlify.app/1x1-600x600.jpg | Implementation | Execute the 
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/8.jpg" alt="Cards icon-top (pricing)">
+                            <img src="screenshots/cards-columns/Cards-icon-top-pricing.jpg" alt="Cards icon-top (pricing)">
                         </div>
                         <div class="section-content">
                             <h4>Cards icon-top (pricing)</h4>
@@ -1051,7 +1051,7 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/9.jpg" alt="Cards icon-right">
+                            <img src="screenshots/cards-columns/Cards-icon-right.jpg" alt="Cards icon-right">
                         </div>
                         <div class="section-content">
                             <h4>Cards icon-right</h4>
@@ -1080,7 +1080,7 @@ IMG: https://beontop.netlify.app/1x1-600x600.jpg | Smart Features | Leverage AI-
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/10.jpg" alt="Cards icon-left (small)">
+                            <img src="screenshots/cards-columns/Cards-icon-left-small.jpg" alt="Cards icon-left (small)">
                         </div>
                         <div class="section-content">
                             <h4>Cards icon-left (small)</h4>
