Cards: replace first example with linked buttons + link-wrapped image/title

--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@ ROW BG:
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/Cards-image-3col-5:3.jpg" alt="Cards image 3col (5/3)">
+                            <img src="screenshots/cards-columns/cards-image-3col-5-3.jpg" alt="Cards image 3col (5/3)">
                         </div>
                         <div class="section-content">
                             <h4>Cards image 3col (5/3)</h4>
@@ -795,9 +795,9 @@ BTN BORDER: 1px solid #000000
 DESC TOP: Professional solutions tailored to your business needs
 DESC TOP ALIGN: center
 
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Web Development | Create stunning, responsive websites that drive engagement and convert visitors into customers with modern technologies
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Mobile Apps | Build powerful iOS and Android applications that deliver exceptional user experiences and boost your business growth
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Cloud Solutions | Deploy scalable cloud infrastructure and services to enhance productivity while reducing operational costs
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Web Development | Create stunning, responsive websites that drive engagement and convert visitors into customers with modern technologies | Learn more | /services/web-development
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Mobile Apps | Build powerful iOS and Android applications that deliver exceptional user experiences and boost your business growth | Learn more | /services/mobile-apps
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Cloud Solutions | Deploy scalable cloud infrastructure and services to enhance productivity while reducing operational costs | Learn more | /services/cloud
 
 DESC BOTTOM: Ready to transform your digital presence? Let's discuss your project
 DESC BOTTOM ALIGN: center
