--- a/index.html
+++ b/index.html
@@ -600,10 +600,10 @@ BTN: BUTTON_TEXT | BUTTON_URL
                     
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/1.jpg" alt="Text Block Example">
+                            <img src="screenshots/textblocks/1.jpg" alt="Text Block with BG and Button BG">
                         </div>
                         <div class="section-content">
-                        <h4>Text Block</h4>
+                        <h4>Text Block — BG Section + BTN BG</h4>
                         <div class="code-wrapper"><pre>/* start */
 LAYOUT: Text block
 TITLE: INSERT SECTION TITLE HERE
@@ -611,6 +611,7 @@ CONTAINER WIDTH: 1100 | 92%
 ALIGN CONTAINER: center
 ALIGN: center
 BG SECTION: #f5f5f5
+BTN BG: #ffffff
 
 H3 INSERT MAIN HEADING HERE
 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
@@ -627,32 +628,101 @@ CTA: INSERT CTA BUTTON TEXT | /contact
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/2.jpg" alt="Text Block Example">
+                            <img src="screenshots/textblocks/2.jpg" alt="Text Block Minimal">
                         </div>
                         <div class="section-content">
-                        <h4>Text Block</h4>
-                        <pre>/* start */
+                        <h4>Text Block — Minimal</h4>
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Text block
 TITLE: INSERT SECTION TITLE HERE
+BTN BG: #f5f5f5
 CONTAINER WIDTH: 1100 | 92%
 ALIGN CONTAINER: center
 ALIGN: center
 
 H3 INSERT MAIN HEADING HERE
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada лacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
 CTA: INSERT CTA BUTTON TEXT | /contact
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/3.jpg" alt="Media Left Example">
+                            <img src="screenshots/textblocks/3.jpg" alt="Media Right No Gap, Full Height">
                         </div>
                         <div class="section-content">
-                        <h4>Media Left</h4>
-                        <pre>/* start */
+                        <h4>Media Right — Full Height + No Gap</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Media right
+BG SECTION: #f5f5f5
+COLS: 50 50
+IMG FULL HEIGHT:
+IMG MIN HEIGHT: 420
+MEDIA GAP: 0
+PADDING SECTION: 0
+PADDING CONTAINER: 0
+PADDING CONTENT: 24 24
+BTN BG: #f5f5f5
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | INSERT IMAGE ALT TEXT
+
+H2 INSERT SECTION TITLE HERE
+H3 INSERT FIRST HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+H3 INSERT SECOND HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+H3 INSERT THIRD HEADING HERE
+— INSERT FIRST LIST ITEM
+— INSERT SECOND LIST ITEM
+— INSERT THIRD LIST ITEM
+
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/textblocks/4.jpg" alt="Media Left No Gap, Full Height">
+                        </div>
+                        <div class="section-content">
+                        <h4>Media Left — Full Height + No Gap</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Media left
+BG SECTION: #f5f5f5
+COLS: 50 50
+IMG FULL HEIGHT:
+IMG MIN HEIGHT: 420
+MEDIA GAP: 0
+PADDING SECTION: 0
+PADDING CONTAINER: 0
+PADDING CONTENT: 24 24
+BTN BG: #f5f5f5
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | INSERT IMAGE ALT TEXT
+
+H2 INSERT SECTION TITLE HERE
+H3 INSERT FIRST HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+H3 INSERT SECOND HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis масса nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+H3 INSERT THIRD HEADING HERE
+— INSERT FIRST LIST ITEM
+— INSERT SECOND LIST ITEM
+— INSERT THIRD LIST ITEM
+
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/textblocks/5.jpg" alt="Media Left With Descriptions and Buttons">
+                        </div>
+                        <div class="section-content">
+                        <h4>Media Left — Headings, Descriptions, CTA</h4>
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Media left
 TITLE: H2 INSERT SECTION TITLE HERE
 HEADING: h2
@@ -660,7 +730,9 @@ DESC TOP: INSERT TOP DESCRIPTION TEXT
 DESC TOP ALIGN: center
 COLS: 40 60
 BTN BG: #f5f5f5
+
 IMG: https://beontop.netlify.app/16x9-1600x900.jpg | INSERT IMAGE ALT TEXT
+
 H3 INSERT FIRST HEADING HERE
 INSERT FIRST PARAGRAPH TEXT HERE
 H3 INSERT SECOND HEADING HERE
@@ -674,42 +746,43 @@ DESC BOTTOM: INSERT BOTTOM DESCRIPTION TEXT
 DESC BOTTOM ALIGN: center
 BTN: INSERT BUTTON TEXT | INSERT BUTTON URL
 CTA: INSERT SECONDARY BUTTON TEXT | INSERT SECONDARY BUTTON URL
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/4.jpg" alt="Media Right Example">
+                            <img src="screenshots/textblocks/6.jpg" alt="Media Right Simple">
                         </div>
                         <div class="section-content">
-                        <h4>Media Right</h4>
-                        <pre>/* start */
+                        <h4>Media Right — Simple</h4>
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Media right
 BG SECTION: #f5f5f5
 BTN BORDER: 1px solid #000000
 COLS: 40 60
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | INSERT IMAGE ALT TEXT
-H2 INSERT SECTION TITLE HERE
 
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | INSERT IMAGE ALT TEXT
+
+H2 INSERT SECTION TITLE HERE
 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada лacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
 DESC BOTTOM: INSERT BOTTOM DESCRIPTION TEXT
 DESC BOTTOM ALIGN: center
 BTN: INSERT BUTTON TEXT | INSERT BUTTON URL
 CTA: INSERT SECONDARY BUTTON TEXT | INSERT SECONDARY BUTTON URL
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/5.jpg" alt="Media Stack Example">
+                            <img src="screenshots/textblocks/7.jpg" alt="Media Stack">
                         </div>
                         <div class="section-content">
                         <h4>Media Stack</h4>
-                        <pre>/* start */
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Media stack
 IMAGE SIZE (RATIO): 16/9
 TITLE: INSERT SECTION TITLE HERE
@@ -728,22 +801,23 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapie
 
 BTN BG: #f5f5f5
 CTA: INSERT CTA BUTTON TEXT | INSERT CTA BUTTON URL
-/* end */</pre>
+/* end */</pre></div>
                         </div>
                     </div>
 
-
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/textblocks/6.jpg" alt="Zigzag bgflip Example">
+                            <img src="screenshots/textblocks/8.jpg" alt="Zigzag Alternating BGs">
                         </div>
                         <div class="section-content">
-                        <h4>Zigzag bgflip</h4>
-                        <pre>/* start */
+                        <h4>Zigzag bgflip — Alternating BG</h4>
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Zigzag bgflip
 TITLE: H2 INSERT SECTION TITLE HERE
-COLS: 40 60
+COLS: 50 50
 IMAGE SIZE (RATIO): 5/3
+ROW EVEN BG: #ffffff
+ROW ODD BG: #f5f5f5
 DESC TOP: INSERT TOP DESCRIPTION TEXT
 DESC TOP ALIGN: center
 
@@ -751,7 +825,6 @@ IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Exterior detailing
 H3 INSERT SECOND HEADING HERE
 Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis dis parturient montes nascetur ridiculus mus donec rhoncus eros lobortis nulla molestie mattis scelerisque maximus eget fermentum odio phasellus non purus est efficitur laoreet mauris pharetra vestibulum fusce dictum risus.
 CTA: Get a quote | /quote
-ROW BG:
 
 IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Interior detailing
 H3 INSERT SECOND HEADING HERE
@@ -760,14 +833,53 @@ INSERT SECOND LIST ITEM
 INSERT THIRD LIST ITEM
 Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat.
 BTN: Book now | /book
-ROW BG: #f5f5f5
 
 IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Protective films
 H3 INSERT SECOND HEADING HERE
 Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
 Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
-ROW BG:
-/* end */</pre>
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/textblocks/9.jpg" alt="Zigzag Compact with Paddings">
+                        </div>
+                        <div class="section-content">
+                        <h4>Zigzag bgflip — Compact Rows</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Zigzag bgflip
+TITLE: H2 INSERT SECTION TITLE HERE
+COLS: 50 50
+IMAGE SIZE (RATIO): 5/3
+ROW EVEN BG: #ffffff
+ROW ODD BG: #f5f5f5
+ROW GAP: 0
+ROW PADDING: 0
+PADDING CONTENT: 24 24
+
+DESC TOP: INSERT TOP DESCRIPTION TEXT
+DESC TOP ALIGN: center
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Exterior detailing
+H3 INSERT SECOND HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis dis parturient montes nascetur ridiculus mus donec rhoncus eros lobortis nulla molestie mattis scelerisque maximus eget fermentum odio phasellus non purus est efficitur laoreet mauris pharetra vestibulum fusce dictum risus.
+CTA: Get a quote | /quote
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Interior detailing
+H3 INSERT SECOND HEADING HERE
+INSERT FIRST LIST ITEM
+INSERT SECOND LIST ITEM
+INSERT THIRD LIST ITEM
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat.
+BTN: Book now | /book
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Protective films
+H3 INSERT SECOND HEADING HERE
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
+/* end */</pre></div>
                         </div>
                     </div>
                 </div>
