Testimonials: add 3 new sections and screenshots (1-3); support CARD ALIGN ICON: center; Cards: no default ratio for icon-only

--- a/BeOnTop (HTML Generator) - актуальный/sidebar.html
+++ b/BeOnTop (HTML Generator) - актуальный/sidebar.html
@@ -328,6 +328,9 @@
 .bot-card.align-center .bot-card__icon{ margin-left: auto; margin-right: auto; }
 .bot-card.align-right .bot-card__icon{ margin-left: auto; margin-right: 0; }
 
+/* Центрировать только иконку, не меняя выравнивание текста */
+.bot-card.icon-only-center .bot-card__icon{ margin-left: auto; margin-right: auto; }
+
 /* Выравнивание для icon-right и icon-left карточек */
 .bot-card.align-left .bot-card__row{ justify-content: flex-start; }
 .bot-card.align-center .bot-card__row{ justify-content: center; }
