--- a/index.html
+++ b/index.html
@@ -1501,66 +1501,98 @@ IMG: https://beontop.netlify.app/16x9-1600x900.jpg | |
                     
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/testimonials/1.jpg" alt="Cards Testimonials Example">
+                            <img src="screenshots/testimonials/1.jpg" alt="Customer Feedback">
                         </div>
                         <div class="section-content">
-                        <h4>Cards Testimonials</h4>
-                        <pre>/* start */
+                        <h4>Customer Feedback</h4>
+                        <div class="code-wrapper"><pre>/* start */
 LAYOUT: Cards 3col
-TITLE: TITLE
-IMAGE SIZE (RATIO): 5/1
+TITLE: Customer Feedback
 CARDS WRAP: center
 CARD RADIUS: 12
 BORDER CARD: none
 CARD SHADOW: soft
-CARD ALIGN: left
 CARD TITLE COLOR: #111111
 CARD COLOR: #555555
-DESC TOP: TOP DESC
+CARD ALIGN: left
+CARD ALIGN ICON: center
+ICON FONT SIZE: large
+DESC TOP: What our clients say about working with us
+DESC TOP ALIGN: center
 
-ICON: ⭐️⭐️⭐️⭐️☆ | NAME1 | "TESTIMONIAL1"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️ | NAME2 | "TESTIMONIAL2"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️| NAME3 | "TESTIMONIAL3"
-/* end */</pre>
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Anna Petrova | "Outstanding service and fast turnaround — exceeded our expectations."
+ICON: ⭐️⭐️⭐️⭐️☆ | Dmitry Ivanov | "Great results and clear communication throughout the entire project."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Olga Smirnova | "Top-notch quality, professional approach, and friendly team."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Alexey Sokolov | "Delivered on time and on budget — highly recommend."
+ICON: ⭐️⭐️⭐️⭐️☆ | Maria Volkova | "Very responsive and helpful, we’ll work together again."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Sergey Orlov | "Clean implementation and measurable impact on our KPIs."
+/* end */</pre></div>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/testimonials/2.jpg" alt="Cards Reviews Extended Example">
+                            <img src="screenshots/testimonials/2.jpg" alt="Client Reviews">
                         </div>
                         <div class="section-content">
-                        <h4>Cards Reviews Extended</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-TITLE: TITLE
-IMAGE SIZE (RATIO): 5/1
+                        <h4>Client Reviews</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards 4col
+TITLE: Client Reviews
 BG SECTION: #f5f5f5
 CONTAINER WIDTH: 1200 | 92%
 CONTAINER ALIGN: center
 CARDS WRAP: center
-CARD WIDTH: 340px 
+CARD WIDTH: 320px
+CARD RADIUS: 10
+BORDER CARD: 1px solid #eef0f2
+CARD SHADOW: 0 6px 18px rgba(0,0,0,.06)
+CARD ALIGN: center
+CARD TITLE COLOR: #0f172a
+CARD COLOR: #475569
+ICON FONT SIZE: medium
+DESC TOP: Real feedback from teams who scaled with our help
+DESC TOP ALIGN: center
+
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Kate Morozova | "They transformed our website performance within weeks."
+ICON: ⭐️⭐️⭐️⭐️☆ | Pavel Denisov | "Solid execution and proactive suggestions along the way."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Irina Lebedeva | "Great attention to detail and smooth delivery process."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Ivan Kuznetsov | "Clear strategy, fast implementation, excellent results."
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/testimonials/3.jpg" alt="Partner Testimonials">
+                        </div>
+                        <div class="section-content">
+                        <h4>Partner Testimonials</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards 2col
+TITLE: Partner Testimonials
+IMAGE SIZE (RATIO): 5/1
+CONTAINER WIDTH: 1000 | 92%
+CONTAINER ALIGN: center
 CARDS WRAP: center
-CARD RADIUS: 12
+CARD RADIUS: 14
 BORDER CARD: none
-CARD SHADOW: soft
+CARD SHADOW: 0 12px 36px rgba(0,0,0,.12)
+CARD BG: #ffffff
 CARD ALIGN: left
-CARD TITLE COLOR: #111111
-CARD COLOR: #555555
-DESC TOP: TOP DESC
+CARD TITLE COLOR: #0f172a
+CARD COLOR: #475569
+ICON FONT SIZE: medium
+DESC TOP: Long‑term partners about collaboration and outcomes
+DESC TOP ALIGN: center
+DESC BOTTOM: We care about outcomes, reliability, and measurable growth
+DESC BOTTOM ALIGN: center
 
-ICON: ⭐️⭐️⭐️⭐️☆ | NAME1 | "TESTIMONIAL1"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️ | NAME2 | "TESTIMONIAL2"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️| NAME3 | "TESTIMONIAL3"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️| NAME4 | "TESTIMONIAL4"
-
-ICON: ⭐️⭐️⭐️⭐️⭐️| NAME5 | "TESTIMONIAL5"
-/* end */</pre>
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Elena Novikova | "They shipped complex features reliably and supported our team at every step."
+ICON: ⭐️⭐️⭐️⭐️☆ | Maksim Fedorov | "Excellent technical depth and product mindset — easy to recommend."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Natalia Koroleva | "Clear roadmap, transparent process, and top-quality delivery."
+ICON: ⭐️⭐️⭐️⭐️⭐️ | Kirill Bogdanov | "We finally have a scalable foundation and faster release cycles."
+/* end */</pre></div>
                         </div>
                     </div>
                 </div>
