Update banners section with new examples and improve cheatsheet formatting

--- a/BeOnTop (HTML Generator) - актуальный/sidebar.html
+++ b/BeOnTop (HTML Generator) - актуальный/sidebar.html
@@ -303,7 +303,7 @@
 .bot-card__icon{
   display:flex; align-items:center; justify-content:center;
   width: auto; height: auto;
-  aspect-ratio: 1/1;
+  aspect-ratio: auto;
   font-size: clamp(32px, 10vw, 72px); line-height:1;
   background: var(--bot-card-icon-bg, transparent);
   border-radius: var(--bot-card-icon-radius, 50%);
